--- a/src/css/schema.css
+++ b/src/css/schema.css
@@ -4,8 +4,8 @@ body {
   }
   
   #sidebar {
-    position: fixed;
-    height: 100vh;
+    /* position: fixed; */
+    /* height: 100vh; */
     background-color: #f5f5f5;
     padding-top: 6em;
     padding-left: 0;
