--- a/src/css/schema.css
+++ b/src/css/schema.css
@@ -7,7 +7,7 @@ body {
     /* position: fixed; */
     /* height: 100vh; */
     background-color: #f5f5f5;
-    padding-top: 6em;
+    padding-top: 5em;
     padding-left: 0;
     padding-right: 0;
   }
@@ -19,17 +19,40 @@ body {
     border-radius: 0 !important;
     margin-top: 0;
     margin-bottom: 0;
+    padding-left: 2em;
   }
-  
+
+  #sidebar .ui.menu > div.header.item {
+    padding: 10px 20px;
+    line-height: 20px;
+    font-size: 1.5em;
+    color: black;
+    border-radius: 0 !important;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  #sidebar .ui.menu > div.item {
+    padding: 10px 20px;
+    line-height: 10px;
+    color: gray;
+    font: italic;
+    border-radius: 0 !important;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   #sidebar .ui.menu > a.item.active {
     background-color: #337ab7;
     color: white;
     border: none !important;
+    padding-left: 2em;
   }
   
   #sidebar .ui.menu > a.item:hover {
     background-color: #eee;
     color: #23527c;
+    padding-left: 2em;
   }
   
   #content {
