--- a/src/css/install.css
+++ b/src/css/install.css
@@ -1,18 +1,5 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: grayscale;
-}
-
-#content {
-padding-top: 5em;
-padding-left: 20px;
-padding-right: 20px;
-}
-
-#content h1 {
-font-size: 36px;
-}
-
-#content .ui.dividing.header {
-width: 100%;
+  font-size: 1.25rem;
 }
