--- a/src/css/install.css
+++ b/src/css/install.css
@@ -2,4 +2,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: grayscale;
   font-size: 1.25rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
