--- a/src/css/schema.css
+++ b/src/css/schema.css
@@ -2,86 +2,90 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: grayscale;
   }
-  
-  #sidebar {
-    /* position: fixed; */
-    /* height: 100vh; */
-    background-color: #f5f5f5;
-    padding-top: 5em;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  
-  #sidebar .ui.menu > a.item {
-    padding: 10px 20px;
-    line-height: 20px;
-    color: #337ab7;
-    border-radius: 0 !important;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 2em;
-  }
 
-  #sidebar .ui.menu > div.header.item {
-    padding: 10px 20px;
-    line-height: 20px;
-    font-size: 1.5em;
-    color: black;
-    border-radius: 0 !important;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
+ipa {
+  font-family: 'Times New Roman', Times, serif;
+}
 
-  #sidebar .ui.menu > div.item {
-    padding: 10px 20px;
-    line-height: 10px;
-    color: gray;
-    font: italic;
-    border-radius: 0 !important;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
+#sidebar {
+  /* position: fixed; */
+  /* height: 100vh; */
+  background-color: #f5f5f5;
+  padding-top: 5em;
+  padding-left: 0;
+  padding-right: 0;
+}
 
-  #sidebar .ui.menu > a.item.active {
-    background-color: #337ab7;
-    color: white;
-    border: none !important;
-    padding-left: 2em;
-  }
-  
-  #sidebar .ui.menu > a.item:hover {
-    background-color: #eee;
-    color: #23527c;
-    padding-left: 2em;
-  }
-  
-  #content {
-    padding-top: 5em;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-  #content h1 {
-    font-size: 36px;
-  }
-  
-  #content .ui.dividing.header {
-    width: 100%;
-  }
-  
-  .ui.centered.small.circular.image {
-    margin-top: 14px;
-    margin-bottom: 14px;
-  }
-  
-  .ui.borderless.menu {
-    box-shadow: none;
-    flex-wrap: wrap;
-    border: none;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  
-  .ui.mobile.only.grid .ui.menu .ui.vertical.menu {
-    display: none;
-  }
+#sidebar .ui.menu > a.item {
+  padding: 10px 20px;
+  line-height: 20px;
+  color: #337ab7;
+  border-radius: 0 !important;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 2em;
+}
+
+#sidebar .ui.menu > div.header.item {
+  padding: 10px 20px;
+  line-height: 20px;
+  font-size: 1.5em;
+  color: black;
+  border-radius: 0 !important;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+#sidebar .ui.menu > div.item {
+  padding: 10px 20px;
+  line-height: 10px;
+  color: gray;
+  font: italic;
+  border-radius: 0 !important;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+#sidebar .ui.menu > a.item.active {
+  background-color: #337ab7;
+  color: white;
+  border: none !important;
+  padding-left: 2em;
+}
+
+#sidebar .ui.menu > a.item:hover {
+  background-color: #eee;
+  color: #23527c;
+  padding-left: 2em;
+}
+
+#content {
+  padding-top: 5em;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#content h1 {
+  font-size: 36px;
+}
+
+#content .ui.dividing.header {
+  width: 100%;
+}
+
+.ui.centered.small.circular.image {
+  margin-top: 14px;
+  margin-bottom: 14px;
+}
+
+.ui.borderless.menu {
+  box-shadow: none;
+  flex-wrap: wrap;
+  border: none;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.ui.mobile.only.grid .ui.menu .ui.vertical.menu {
+  display: none;
+}
