--- a/src/css/schema.css
+++ b/src/css/schema.css
@@ -4,7 +4,7 @@ body {
   }
 
 ipa {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Times New Roman', Times, serif
 }
 
 #sidebar {
